src/App.css
/* Other rules */
header{
    display: flex;
    align-items: center;
    padding-bottom: 10px;
    border-bottom: 1px solid lightgray;
}

header svg {
    margin: 30px;
}

header span {
    margin-left: 30px;
    font-size: 48px;
}

.container {
    display: flex;
    align-items: center;
    width: 100%;
    justify-content: center;
    margin-top: 100px;
}

.counter {
    width: 150px;
    height: 150px;
    background-color: #5C48D3;
    border-radius: 15px;
    margin: 0 40px;
}
.counter span {
    color: white;
    display: flex;
    justify-content: center;
    align-items: center;
    line-height: 150px;
    font-size: 96px;
}

.reset{
    display: flex;
    justify-content: center;
    align-items: center;
    width: 150px;
    height: 60px;
    background: #5C48D3;
    border-radius: 15px;
    margin-top: -100px;

}
.reset span {
    color: white;
    font-size: 32px;
}

footer{
    margin: 100px 0;
    text-align: center;
}

footer span {
    font-weight: bold;
}

.hidden{
    display: none;
}
/* MEDIA QUERIES  */

/* ----------- */
/*    1328px   */
/* ----------- */
@media (max-width: 1328px) {
    .container{
      max-width: 1328px;
    }
  }
  
  /* ----------- */
  /*    1080px   */
  /* ----------- */
  @media (max-width: 1250px) {
    .container{
      max-width: 1250px;
    }
  }
  
  /* ----------- */
  /*    1024px   */
  /* ----------- */
  @media (max-width: 1024px) {
    .container{
      max-width: 1024px;
    }
  }
  
  /* ----------- */
  /*    1120px    */
  /* ----------- */
  @media (max-width: 1120px) {
    .container{
      max-width: 1120px;
    }
  }
  
  /* ----------- */
  /*    960px    */
  /* ----------- */
  @media (max-width: 960px) {
    header span {
        margin-left: 20px;
        font-size: 38px;
    }
    .container{
      max-width: 960px;
    }
  }
  
  /* ----------- */
  /*    768px    */
  /* ----------- */
  @media (max-width: 768px) {
    .container{
      max-width: 768px;
    }
  }

